--- a/xviicoin.conf
+++ b/xviicoin.conf
@@ -29,6 +29,9 @@
 # Use as many addnode= settings as you like to connect to specific peers
 
 addnode=localhost:6917
+addnode=40.117.232.181:6917
+addnode=137.117.85.9:6917
+addnode=40.86.89.239:6917
 
 # ... or use as many connect= settings as you like to connect ONLY
 # to specific peers:
