--- a/xviicoin.conf
+++ b/xviicoin.conf
@@ -32,6 +32,7 @@ addnode=localhost:6917
 addnode=40.117.232.181:6917
 addnode=137.117.85.9:6917
 addnode=40.86.89.239:6917
+addnode=13.64.155.204:6917
 
 # ... or use as many connect= settings as you like to connect ONLY
 # to specific peers:
