--- a/xviicoin.conf
+++ b/xviicoin.conf
@@ -28,9 +28,12 @@
 ##############################################################
 # Use as many addnode= settings as you like to connect to specific peers
 
-addnode=68.183.48.165:6917
+addnode=178.128.184.173:6917
+addnode=138.68.43.220:6917
+addnode=68.183.115.178:6917
+addnode=159.89.234.193:6917
+addnode=167.99.178.251:6917
 addnode=134.209.60.198:6917
-addnode=23.99.200.11:6917
 
 
 # ... or use as many connect= settings as you like to connect ONLY
@@ -58,7 +61,7 @@ rpctimeout=30
 #rpcallowip=1.2.3.4/255.255.255.0
 rpcallowip=127.0.0.1
 # Listen for RPC connections on this TCP port:
-#rpcport=9432
+rpcport=9432
 # You can use xviicoin or xviicoind to send commands to xviicoin/xviicoind
 # running on another host using this option:
 #rpcconnect=192.168.2.29
@@ -76,7 +79,8 @@ gen=1
 4way=1
 # Pre-generate this many public/private key pairs, so wallet backups will be valid for
 # both prior transactions and several dozen future transactions.
-#keypool=100
+keypool=5000
+
 # Pay an optional transaction fee every time you send xviicoins.  Transactions with fees
 # are more likely than free transactions to be included in generated blocks, so may
 # be validated sooner.
